--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.3",
     "express-oauth2-jwt-bearer": "^1.6.0",
     "mongoose": "^8.2.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "react-accessible-accordion": "^5.0.0"
   },
