--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.7"
