Updates on User model and work on Notifications and setup for the header component which will hold the title stamp, navbar, notifications and personal profile link

--- a/.env.template
+++ b/.env.template
@@ -3,6 +3,9 @@ PORT=8080
 
 # comma-separate list of allowed web domains (e.g. http://localhost:5050,http://localhost:3000)
 # this ensures strict control on which web clients can request data from your server. 
+# url1 -  Profile Picture Collection
+# url2 -  Uploaded Document Collection
+# url3 -  Archived Documentation Collection
 CORS_WHITELIST="<url>,<url>"
 
 # node environment
