--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.20.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "npm": "^10.8.2",
     "postcss": "^8.4.41",
     "react": "^18.2.0",
