--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "react-accessible-accordion": "^5.0.0"
+    "react-accessible-accordion": "^5.0.0",
+    "stripe": "^17.2.0"
   },
   "devDependencies": {
     "dotenv-cli": "^7.4.1",
