--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "dotenv -- nodemon index.js"
+    "dev": "dotenv -- nodemon index.js",
+    "build": "npm --prefix client run build",
+    "start": "node index.js" 
   },
   "author": "",
   "license": "ISC",
