--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "dotenv -- nodemon index.js",
-    "build": "npm --prefix client run build",
+    "build": "cd client && npm install && npm run build",
     "start": "node index.js" 
   },
   "author": "",
