--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^4.8.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "lucide-react": "^0.454.0",
     "npm": "^10.8.2",
     "postcss": "^8.4.41",
     "react": "^18.2.0",
