--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.454.0",
     "npm": "^10.8.2",
     "postcss": "^8.4.41",
     "react": "^18.2.0",
